color.css footer uses same colour as the odd rows now added highlighting for disapproved reviews layout.css the <a> fills the tab now, making the whole tab 'clickable' fixed some review text body layout fixed some margin issue resulting in the textarea (ed2k on the massfile page) exceed the viewport's width->scrollbar added a margin for g_content to prevent a scrollbar (horizontal) from appearing if a link close to the viewport's edge (e.g. pagination prev/next) is clicked
git-svn-id: svn://dev.anidb.net/svn/trunk@2861 bed53a55-4da3-433c-baf4-d4f70f2fd34a

--- a/css-dev/grey_r2/layout.css
+++ b/css-dev/grey_r2/layout.css
@@ -390,8 +390,12 @@ margin-left: 0.5em;
 }
 #layout-tabs ul.main-tabs li
 {
-padding: 0 6px 0px 6px;
+padding: 0;
 border-bottom: none;
+}
+#layout-tabs ul.main-tabs li a
+{
+padding: 0 6px;
 }
 #layout-tabs + #layout-main
 {
@@ -433,4 +437,19 @@ width:50%;
 div.userpage_all div.clubs div.club *
 {
 display: table-row;
+}
+#layout-main div.animeatt_reviews div.review div.text
+{
+margin-left: 1em;
+margin-top: 1em;
+}
+#layout-main div.addfilem.form div.dump textarea
+{
+padding-left: 0;
+padding-right: 0;
+margin-right: 0;
+}
+#layout-main div.g_content
+{
+margin: 0 1em;
 }
