--- a/css/grey_r2/color.css
+++ b/css/grey_r2/color.css
@@ -34,7 +34,7 @@ html,
 {
 background-image: url(../grey/images/bg_1.gif);
 }
-#layout-nav,#layout-footer,#menu-main,#menu-lists,#menu-private,#menu-mod,#menu-support,#menu-account
+#layout-nav,#menu-main,#menu-lists,#menu-private,#menu-mod,#menu-support,#menu-account
 {
 background-image: url(../grey/images/bg_2.gif);
 }
@@ -81,7 +81,8 @@ span.g_odd,
 div.quotebody div.quote div.g_odd,
 #layout-main div.chartags_all div.addbox div.tag-column h5,
 #layout-main div.quotebody div.quoteof,
-#layout-main div.userpage_all div.blog div.body
+#layout-main div.userpage_all div.blog div.body,
+#layout-footer
 {
 background-color: hsla(0, 0%, 0%, 0.4);
 }
@@ -105,14 +106,15 @@ background-color: hsla(207, 86%, 44%, 0.4);
 #layout-content div.producer_related_anime tr.mylist,
 #layout-content div.creq_all tr.granted,
 #layout-content div.creq_data ins,
-#layout-content div.animeatt_reviews div.review.approved  > h4,
+#layout-content div.animeatt_reviews div.review.approved > h4,
 #layout-content div.animelist_all tr.all_watched td,
 #layout-content div.mylist_list tr.all_watched td,
 #layout-content #layout-main div.ed2kdump_all table.filelist .in
 {
 background-color: hsla(127, 54%, 25%, 0.6);
 }
-#layout-content div.myvotes_all table .low
+#layout-content div.myvotes_all table .low,
+#layout-content div.animeatt_reviews div.review.disapproved > h4
 {
 background-color: hsla(0, 100%, 50%, 0.3);
 }
